# editor

./: README.md  index.html  package.json  tsconfig.app.json  vite.config.ts
scripts/: setup-linux-node-modules.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/binaries/: libgguf_quantizer.dylib  quantizer-aarch64-apple-darwin  quantizer-x86_64-unknown-linux-gnu
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: editor.rs  lib.rs  quant.rs
src/editor/: EditorApp.tsx  ggufParser.ts
